force-app/main/default/objects/Conga_Reports_Gift_Receipt_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls Conga Report Queries and templates consumed to produce gift receipts.</description>
    <fields>
        <fullName>AccountAddress__c</fullName>
        <description>Account Mailing Address</description>
        <label>AccountAddress</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSal__c</fullName>
        <description>Account - Primary Contact Salutation</description>
        <label>AccountSal</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <description>Payment - Designation</description>
        <label>Designation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetAddress__c</fullName>
        <label>GetAddress</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetJointSal__c</fullName>
        <description>Contact Salutation - Joint Formal Standard</description>
        <label>GetJointSal</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetPosition__c</fullName>
        <label>GetPosition</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetSal__c</fullName>
        <description>Contact Salutation - Ind Formal Standard</description>
        <label>GetSal</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GiftReceiptEmailFrom__c</fullName>
        <label>GiftReceiptEmailFrom</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GiftReceiptEmailTemplate__c</fullName>
        <description>GiftReceiptv2</description>
        <label>GiftReceiptEmailTemplate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GiftReceiptTemplate__c</fullName>
        <description>Gift Receipt - Payment</description>
        <label>GiftReceiptTemplate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgGiftReceiptEmailTemplate__c</fullName>
        <label>OrgGiftReceiptEmailTemplate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Conga Reports Gift Receipt Settings</label>
</CustomObject>